# omnivoice-triton-server

./: README.md  pyproject.toml  requirements.txt
docs/: DEPLOYMENT.md  README.zh-CN.md  request.md
scripts/: install_systemd_service.sh  start_server.sh
src/: app.py  inferer.py  launcher.py  text_normalization.py
src/modeling/models/: omnivoice.py
src/omnivoice_triton_server/: __init__.py  __main__.py
src/triton_backend/models/: faster_runner.py  triton_faster_runner.py  triton_runner.py
tests/: load_mixed_1000.py  test_text_normalization.py
