[project]
name = "omnivoice-triton-server"
version = "0.1.0"
description = "OpenAI-compatible OmniVoice server with batched multi-GPU Triton inferers"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "pydantic-settings>=2",
  "python-multipart",
  "httpx",
  "numpy",
  "regex",
  "jieba",
  "torch",
  "torchaudio",
  "soundfile",
  "triton",
  "transformers",
  "accelerate",
  "pydub",
  "concurrent-log-handler",
]

[project.scripts]
omnivoice-triton-server = "omnivoice_triton_server.__main__:main"

[tool.ruff]
line-length = 100

[tool.setuptools]
py-modules = [
  "app",
  "audio",
  "chunking",
  "config",
  "infer_client",
  "inferer",
  "launcher",
  "logging_config",
  "protocol",
  "voices",
]

[tool.setuptools.packages.find]
where = ["src"]
